--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <!-- 系统版本统计 -->
         <div class="mt-20 md:mt-32">
           <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-bold mb-6 text-center">用户常用Windows版本分布</h3>
+            <h3 class="text-xl font-bold mb-6 text-center">用户常用Windows版本分布(数据整理中……)</h3>
             <div class="h-64">
               <canvas id="osDistributionChart"></canvas>
             </div>
