--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GWindows - Windows系统资源与工具平台</title>
+  <meta name="keywords" content="软件分享,资源项目,网盘资源,免费软件,在线教程,设计软件,火车头资源库,火车头三号,Train03,train03,大海资源库,大海">
+<meta name="description" content="大海资源库是一个丰富的资源网站：我们汇集了众多网友分享的优质软件、资源项目和网盘资源，涵盖了操作系统、设计软件、办公软件、多媒体制作、编程语言等多个领域。">
   <!-- 引入Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- 引入Font Awesome -->
